--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^18.3.1",
     "antd": "^5.22.2",
     "axios": "^1.7.8",
+    "emailjs-com": "^3.2.0",
     "font-awesome": "^4.7.0",
     "json-server": "^0.17.4",
     "query-string": "^9.1.1",
