--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@types/node": "^16.18.119",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "antd": "^5.22.2",
+    "antd": "^5.22.7",
     "axios": "^1.7.8",
     "emailjs-com": "^3.2.0",
     "font-awesome": "^4.7.0",
@@ -26,8 +26,8 @@
     "query-string": "^9.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^6.28.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^6.28.1",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "sass": "^1.81.0",
@@ -59,5 +59,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
