--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@types/react-dom": "^18.3.1",
     "antd": "^5.22.7",
     "axios": "^1.7.8",
+    "clsx": "^2.1.1",
     "emailjs-com": "^3.2.0",
     "font-awesome": "^4.7.0",
+    "framer-motion": "^11.16.4",
     "json-server": "^0.17.4",
     "query-string": "^9.1.1",
     "react": "^18.3.1",
@@ -31,6 +33,8 @@
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "sass": "^1.81.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "^4.9.5",
     "uuid": "^11.0.3",
     "web-vitals": "^2.1.4"
